# OmniPkg

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  omnipkg.py  omnipkg_core.py  omnipkg_desktop.py  omnipkg_qt.py  preferences.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
assets/: omnipkg-askpass.py
tests/: test_core.py
